--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "sass": "sass --watch ./sass/main.scss:./public/styles/main.css --style expanded"
+    "sass": "sass --watch ./sass/main.scss:./public/styles/main.css ./sass/pages.scss:./public/styles/pages.css --style expanded"
   },
   "author": "",
   "license": "ISC",
